--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-PORT = 4000
+PORT = 5000
 db = mongodb+srv://adekolamuhammed7:smacollege123@mern.bwg7wr2.mongodb.net/?retryWrites=true&w=majority
+SECRET_KEY = 12345
